# fire

./: .coverage  .cz.toml  .gitignore  .markdownlint.json  .prettierignore  CHANGELOG.md  Changelog.md  Dockerfile  LICENSE  MANIFEST.in  README-pypi.md  README.md  RELEASE_NOTES.md  TODO.md  analysis.py  black_test.py  carlo.toml  check_dates.py  config.py  config.toml  copilot-interaction-rules.md  copilot_context.txt  firestarter.ps1  firestarter.sh  helpers.py  ignite.sh  imerio.toml  main.py  main_old.py  markdownlint.sh  montecarlo.Ipynb  plot-test.py  plots.py  pyproject.toml  release-notes.sh  requirements.txt  simulation.py  test-install.sh  update_copyright_year.sh
.github/: CODEOWNERS
.github/workflows/: release.yml  test.yaml  test.yml
configs/: 50-no-pension.toml  50.toml  config.toml  test_config.toml
data/: Bloomberg-EUR-Govt-Bond-1-3y-monthly.xlsx  CB_BTCUSD-daily.xlsx  CPALTT01ITM657N-monthly.xlsx  ECB BOND Data Portal wide_20250814133117.xlsx  ECB-BOND-Data.xlsx  ECBESTR-TRIMMEDMEAN-daily.xlsx  EONIAPLUSESTR-daily.xlsx  EONIAPLUSESTR.xlsx  EONIARATE.xlsx  Ethereum Dati Storici.csv  Ethereum Dati Storici.xlsx  Ethereum Historical Data.csv  Ethereum Historical Data.xlsx  Ethereum-monthly.xlsx  Future Argento Dati Storici.csv  Future Argento Dati Storici.xlsx  MSCI All-Country World Equity Index Dati Storici.csv  MSCI All-Country World Equity Index Dati Storici.xlsx  MSCI World Historical Data.csv  MSCI World Historical Data.xlsx  MSCI-2-daily.xlsx  MSCI-All-daily.xlsx  MSCI-World-ACWI-ACWIIMI-1999-2025-Monthly.xlsx  MSCI-World-ACWI-ACWIIMI-1999-2025-daily.xlsx  MSCI-daily.xlsx  MSCI-test-daily.xlsx  MSCI-test-monthly.xlsx  Silver-monthly.xlsx  Thomson-Reuters-Eurozone-3y-Government-Monthly.xltx  compare.py  crises.md  data_metrics.md  data_metrics.py  data_metrics_backup.py  data_metrics_v0.py  portfolios.py
docs/: Montecarlo.md  assets.md  config-samples.md  config.md  configuration_guide.md  correlation.md  inflation.md  install.md  lognormal-return.md  output.md  parallel_execution.md  real_estate.md  release.md  returns-estimators-1.md  returns-estimators-2.md  returns-monthly.md  returns.md  simulation_engine.md  usage.md
docs/notes/: asset_classes.md  assets_validation.md  containerize.md  correlation.md  docker-install-test.md  improvements.md  inflation.md  monthly_returns.md  new-cases-selection.md  next_action.md  online-architecture.md  output.md  parallel_execution.md  problems.md  release.md  returns.md  shocks.md  simulation_engine.md  tmp.md  web-interface.md  withdrawals.md
docs/reports/: summary.md
firecast/: __init__.py  main.py  version.py
firecast/config/: config.py  correlation_matrix.py
firecast_data/: ECB ITALY HICP wide.xlsx  ECB-ITALY-HICP-monthly.xlsx  EONIAPLUSESTR-daily.xlsx  EURUSD-daily.csv  Ethereum-daily.xlsx  MSCI-3-daily.xlsx  MSCI-All-EUR-daily.xlsx  MSCI-All-USD-daily.xlsx  MSCI-All-daily.xlsx  MSCI-daily_1.xlsx  MSCI-test-daily.xlsx  MSCI-test-monthly.xlsx  daily-to-monthly.py  data_metrics.md  data_metrics.py  download_data.py  portfolio-1-daily.xlsx  portfolio-2-daily.xlsx  portfolios.md  portfolios.py  price_to_eur.py
firestarter/: __init__.py  main.py  main_v1.py  version.py
ignite/: main.py  version.py
(+86 files in other folders)
