[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firestarter"
version = "0.1.0b4"
description = "Monte Carlo simulation tool for FIRE (Financial Independence / Early Retirement) planning."
authors = [{ name = "aimer63", email = "imeriod@gmail.com" }]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pandas-stubs",
  "matplotlib",
  "pydantic",
  "tomli",
  "tomli-w",
  "tqdm",
]

[project.scripts]
fire = "firestarter.main:main"

[tool.setuptools.packages.find]
include = ["firestarter*"]
