[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firestarter"
version = "0.1.1"
description = "Monte Carlo simulation tool for FIRE (Financial Independence / Early Retirement) planning."
authors = [{ name = "aimer63", email = "imeriod@gmail.com" }]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pandas-stubs",
  "PyQt5",
  "matplotlib",
  "pydantic",
  "tomli",
  "tomli-w",
  "tqdm",
]

[project.scripts]
fire = "firestarter.main:main"

[tool.setuptools.packages.find]
include = ["firestarter*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"firestarter" = [
 "README.md",
 "CHANGELOG.md",
 "config/config.toml",
 "docs/*",
 "docs/pics/*",
 "docs/reports/*",
 "data/MSCI-World-ACWI-ACWIIMI-1999-2025-daily.xlsx",
 "data/MSCI-World-ACWI-ACWIIMI-1999-2025-monthly.xlsx",
 "data/data_metrics.md",
 "data/data_metrics.py",
 "data/shocks.md",
]

[tool.ruff]
ignore = ["E501"]
