[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firecast"
version = "0.1.2"
description = "Monte Carlo simulation tool for FIRE (Financial Independence / Early Retirement) planning."
authors = [{ name = "aimer63", email = "63aimer@gmail.com" }]
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pandas-stubs",
  "openpyxl",
  "PyQt5",
  "matplotlib",
  "seaborn",
  "pydantic",
  "tomli",
  "tomli-w",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "coverage",
  "twine",
  "build",
  "commitizen"
]

[project.scripts]
fire = "firecast.main:main"
data-metrics = "firecast_data.data_metrics:main"
portfolios = "firecast_data.portfolios:main"

[tool.setuptools.packages.find]
include = ["firecast*", "firecast_data*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"firecast" = [
 "firecast_data/MSCI-World-ACWI-ACWIIMI-1999-2025-daily.xlsx",
 "firecast_data/MSCI-World-ACWI-ACWIIMI-1999-2025-monthly.xlsx",
 "firecast_data/data_metrics.md",
 "firecast_data/data_metrics.py",
 "firecast_data/portfolios.py",
 "firecast_data/shocks.md"
]

[tool.ruff]
ignore = ["E501"]
